--- a/YourasMusic/src/yourasmusic/FXMLCriarConta.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLCriarConta.fxml
@@ -15,37 +15,16 @@
    <children>
       <AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;">
          <children>
-            <Label alignment="CENTER" layoutX="547.0" layoutY="184.0" minHeight="16" minWidth="69" text="Criar Conta" textFill="WHITE">
-               <font>
-                  <Font name="Vision-BlackItalic" size="34.0" />
-               </font>
-            </Label>
             <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#37474f" height="535.0" layoutX="277.0" layoutY="228.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="727.0" />
-            <Label fx:id="label1" layoutX="444.0" layoutY="252.0" minHeight="16" minWidth="69" text="Nome de utilizador" textFill="WHITE">
+            <Button layoutX="589.0" layoutY="711.0" mnemonicParsing="false" onAction="#abrirPaginaIniciarSessao" stylesheets="@styles.css" text="Iniciar Sessão" textAlignment="CENTER">
                <font>
-                  <Font name="Vision-Light" size="26.0" />
+                  <Font name="Vision-Regular" size="14.0" />
                </font>
-            </Label>
-            <TextField fx:id="txtfld_introduzir_username" alignment="TOP_LEFT" layoutX="443.0" layoutY="276.0" prefHeight="39.0" prefWidth="395.0">
-               <font>
-                  <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <Label fx:id="label11" layoutX="443.0" layoutY="502.0" minHeight="16" minWidth="69" text="Password" textFill="WHITE">
-               <font>
-                  <Font name="Vision-Light" size="26.0" />
-               </font>
-            </Label>
-            <TextField fx:id="txtfld_introduzir_password" layoutX="443.0" layoutY="526.0" prefHeight="39.0" prefWidth="395.0">
-               <font>
-                  <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <Label fx:id="label111" layoutX="443.0" layoutY="586.0" minHeight="16" minWidth="69" text="Criar conta como" textFill="WHITE">
-               <font>
-                  <Font name="Vision-Light" size="26.0" />
-               </font>
-            </Label>
-            <ComboBox fx:id="opc_entrar_como" layoutX="443.0" layoutY="610.0" prefHeight="39.0" prefWidth="395.0" />
-            <Button layoutX="577.0" layoutY="675.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="577.0" layoutY="663.0" mnemonicParsing="false" onAction="#criarConta" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
                <font>
                   <Font name="Vision-Heavy" size="23.0" />
                </font>
@@ -53,6 +32,39 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <ComboBox fx:id="opc_entrar_como" layoutX="443.0" layoutY="567.0" prefHeight="39.0" prefWidth="395.0" />
+            <Label fx:id="label111" layoutX="443.0" layoutY="543.0" minHeight="16" minWidth="69" text="Criar conta como" textFill="WHITE">
+               <font>
+                  <Font name="Vision-Light" size="26.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtfldConfirmarPassword" layoutX="443.0" layoutY="483.0" prefHeight="39.0" prefWidth="395.0">
+               <font>
+                  <Font name="Vision-Regular" size="22.0" />
+               </font></TextField>
+            <Label fx:id="label11" layoutX="443.0" layoutY="459.0" minHeight="16" minWidth="69" text="Confirmar Password" textFill="WHITE">
+               <font>
+                  <Font name="Vision-Light" size="26.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtfldPassword" layoutX="445.0" layoutY="400.0" prefHeight="39.0" prefWidth="395.0">
+               <font>
+                  <Font name="Vision-Regular" size="22.0" />
+               </font></TextField>
+            <Label fx:id="label112" layoutX="445.0" layoutY="376.0" minHeight="16" minWidth="69" text="Password" textFill="WHITE">
+               <font>
+                  <Font name="Vision-Light" size="26.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtfldEmail" alignment="TOP_LEFT" layoutX="443.0" layoutY="318.0" prefHeight="39.0" prefWidth="395.0">
+               <font>
+                  <Font name="Vision-Regular" size="22.0" />
+               </font></TextField>
+            <Label fx:id="label12" layoutX="444.0" layoutY="294.0" minHeight="16" minWidth="69" text="Email" textFill="WHITE">
+               <font>
+                  <Font name="Vision-Light" size="26.0" />
+               </font>
+            </Label>
             <ImageView fitHeight="170.0" fitWidth="230.0" layoutX="557.0" layoutY="14.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@pics/user.png" />
@@ -61,32 +73,11 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </ImageView>
-            <Label fx:id="label112" layoutX="445.0" layoutY="419.0" minHeight="16" minWidth="69" text="Password" textFill="WHITE">
+            <Label alignment="CENTER" layoutX="550.0" layoutY="184.0" minHeight="16" minWidth="69" text="Criar Conta" textFill="WHITE">
                <font>
-                  <Font name="Vision-Light" size="26.0" />
+                  <Font name="Vision-BlackItalic" size="34.0" />
                </font>
             </Label>
-            <TextField fx:id="txtfld_introduzir_password1" layoutX="445.0" layoutY="443.0" prefHeight="39.0" prefWidth="395.0">
-               <font>
-                  <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <Label fx:id="label12" layoutX="444.0" layoutY="337.0" minHeight="16" minWidth="69" text="Email" textFill="WHITE">
-               <font>
-                  <Font name="Vision-Light" size="26.0" />
-               </font>
-            </Label>
-            <TextField fx:id="txtfld_introduzir_username1" alignment="TOP_LEFT" layoutX="443.0" layoutY="361.0" prefHeight="39.0" prefWidth="395.0">
-               <font>
-                  <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <Button layoutX="589.0" layoutY="726.0" mnemonicParsing="false" onAction="#abrirPaginaIniciarSessao" stylesheets="@styles.css" text="Iniciar Sessão" textAlignment="CENTER">
-               <font>
-                  <Font name="Vision-Regular" size="14.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
          </children>
       </AnchorPane>
    </children>
