Nova função com CRUD

--- a/YourasMusic/src/yourasmusic/FXMLIniciarSessao.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLIniciarSessao.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.IniciarSessaoController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.IniciarSessaoController">
     <children>
         <Label alignment="CENTER" layoutX="526.0" layoutY="269.0" minHeight="16" minWidth="69" text="Iniciar Sessão" textFill="WHITE">
          <font>
@@ -44,7 +44,7 @@
          </font>
       </Label>
       <ComboBox fx:id="opc_entrar_como" layoutX="443.0" layoutY="560.0" prefHeight="39.0" prefWidth="395.0" />
-      <Button layoutX="575.0" layoutY="616.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="133.0" text="Entrar" textAlignment="CENTER">
+      <Button layoutX="575.0" layoutY="616.0" mnemonicParsing="false" onAction="#verificarDadosLogin" prefHeight="24.0" prefWidth="133.0" text="Entrar" textAlignment="CENTER">
          <font>
             <Font name="Vision-Heavy" size="23.0" />
          </font>
