--- a/YourasMusic/src/yourasmusic/FXMLCriarConta.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLCriarConta.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,56 +12,27 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.CriarContaController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.CriarContaController">
    <children>
       <AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;">
          <children>
             <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#37474f" height="535.0" layoutX="277.0" layoutY="228.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="727.0" />
-            <Button layoutX="589.0" layoutY="711.0" mnemonicParsing="false" onAction="#abrirPaginaIniciarSessao" stylesheets="@styles.css" text="Iniciar Sessão" textAlignment="CENTER">
-               <font>
-                  <Font name="Vision-Regular" size="14.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button layoutX="577.0" layoutY="663.0" mnemonicParsing="false" onAction="#criarConta" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
-               <font>
-                  <Font name="Vision-Heavy" size="23.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <ComboBox fx:id="opc_entrar_como" layoutX="443.0" layoutY="567.0" prefHeight="39.0" prefWidth="395.0" />
-            <Label fx:id="label111" layoutX="443.0" layoutY="543.0" minHeight="16" minWidth="69" text="Criar conta como" textFill="WHITE">
+            <Label fx:id="label111" layoutX="443.0" layoutY="540.0" minHeight="16" minWidth="69" text="Criar conta como" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
             </Label>
-            <TextField fx:id="txtfldConfirmarPassword" layoutX="443.0" layoutY="483.0" prefHeight="39.0" prefWidth="395.0">
-               <font>
-                  <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <Label fx:id="label11" layoutX="443.0" layoutY="459.0" minHeight="16" minWidth="69" text="Confirmar Password" textFill="WHITE">
+            <Label fx:id="label11" layoutX="443.0" layoutY="455.0" minHeight="16" minWidth="69" text="Confirmar Password" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
             </Label>
-            <TextField fx:id="txtfldPassword" layoutX="445.0" layoutY="400.0" prefHeight="39.0" prefWidth="395.0">
-               <font>
-                  <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <Label fx:id="label112" layoutX="445.0" layoutY="376.0" minHeight="16" minWidth="69" text="Password" textFill="WHITE">
+            <Label fx:id="label112" layoutX="445.0" layoutY="372.0" minHeight="16" minWidth="69" text="Password" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
             </Label>
-            <TextField fx:id="txtfldEmail" alignment="TOP_LEFT" layoutX="443.0" layoutY="318.0" prefHeight="39.0" prefWidth="395.0">
-               <font>
-                  <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <Label fx:id="label12" layoutX="444.0" layoutY="294.0" minHeight="16" minWidth="69" text="Email" textFill="WHITE">
+            <Label fx:id="label12" layoutX="444.0" layoutY="288.0" minHeight="16" minWidth="69" text="Email" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
@@ -78,6 +50,29 @@
                   <Font name="Vision-BlackItalic" size="34.0" />
                </font>
             </Label>
+            <TextField fx:id="txtfldEmail" alignment="TOP_LEFT" layoutX="443.0" layoutY="318.0" prefHeight="39.0" prefWidth="395.0">
+               <font>
+                  <Font name="Vision-Regular" size="22.0" />
+               </font></TextField>
+            <PasswordField fx:id="txtfldPassword" layoutX="445.0" layoutY="400.0" prefHeight="45.0" prefWidth="395.0" />
+            <PasswordField fx:id="txtfldConfirmarPassword" layoutX="443.0" layoutY="486.0" prefHeight="45.0" prefWidth="395.0" />
+            <ComboBox fx:id="opc_entrar_como" layoutX="443.0" layoutY="567.0" prefHeight="39.0" prefWidth="395.0" />
+            <Button layoutX="577.0" layoutY="663.0" mnemonicParsing="false" onAction="#criarConta" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
+               <font>
+                  <Font name="Vision-Heavy" size="23.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="589.0" layoutY="711.0" mnemonicParsing="false" onAction="#abrirPaginaIniciarSessao" stylesheets="@styles.css" text="Iniciar Sessão" textAlignment="CENTER">
+               <font>
+                  <Font name="Vision-Regular" size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
          </children>
       </AnchorPane>
    </children>
