--- a/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.shape.Ellipse?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLAlbunsController">
    <children>
-      <BorderPane layoutX="2.0" layoutY="1.0" prefHeight="800.0" prefWidth="990.0" />
-      <BorderPane layoutX="12.0" layoutY="11.0" prefHeight="800.0" prefWidth="990.0">
+      <BorderPane layoutX="2.0" layoutY="1.0" prefHeight="800.0" prefWidth="990.0">
          <center>
-            <Ellipse fill="DODGERBLUE" radiusX="100.0" radiusY="100.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
-         </center>
-      </BorderPane>
+            <Label text="Albuns" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+         </center></BorderPane>
    </children>
 </AnchorPane>
