--- a/YourasMusic/src/yourasmusic/FXMLMusic.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLMusic.fxml
@@ -3,10 +3,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Ellipse?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLMusicController">
    <children>
-      <Label layoutX="483.0" layoutY="373.0" text="Well done" />
+      <Label layoutX="483.0" layoutY="373.0" text="Inicial">
+         <font>
+            <Font size="36.0" />
+         </font></Label>
       <Ellipse fill="DODGERBLUE" layoutX="128.0" layoutY="114.0" radiusX="100.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
       <Ellipse fill="DODGERBLUE" layoutX="862.0" layoutY="114.0" radiusX="100.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
       <Ellipse fill="DODGERBLUE" layoutX="120.0" layoutY="699.0" radiusX="100.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
