--- a/YourasMusic/src/yourasmusic/FXMLMusicPane.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLMusicPane.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -14,20 +13,15 @@
             <Insets />
          </opaqueInsets>
          <children>
-            <Label fx:id="albuns" layoutX="69.0" layoutY="168.0" onDragDetected="#abrirAlbuns" prefHeight="27.0" prefWidth="77.0" text="Albuns">
+            <Button layoutX="68.0" layoutY="140.0" mnemonicParsing="false" onAction="#abrirAlbuns" stylesheets="@styles.css" text="Albuns">
                <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="69.0" layoutY="246.0" prefHeight="27.0" prefWidth="77.0" text="Artistas">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <Button layoutX="60.0" layoutY="316.0" mnemonicParsing="false" onAction="#abrirAlbuns" stylesheets="@styles.css" text="Albuns">
-               <font>
-                  <Font size="18.0" />
+                  <Font size="24.0" />
                </font></Button>
+            <Button layoutX="65.0" layoutY="211.0" mnemonicParsing="false" onAction="#abrirArtistas" stylesheets="@styles.css" text="Artistas">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
    </left>
