--- a/YourasMusic/src/yourasmusic/FXMLCriarConta.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLCriarConta.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -8,38 +10,37 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.collections.FXCollections ?>
-<?import java.lang.String ?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.CriarContaController">
-   <children>
-      <AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;">
+<BorderPane prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.CriarContaController">
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #607D8B;" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#37474f" height="535.0" layoutX="277.0" layoutY="228.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="727.0" />
-            <Label fx:id="label111" layoutX="443.0" layoutY="540.0" minHeight="16" minWidth="69" text="Criar conta como" textFill="WHITE">
+            <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#37474f" height="716.0" layoutX="277.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="727.0" />
+            <Label fx:id="label111" layoutX="444.0" layoutY="555.0" minHeight="16" minWidth="69" text="Criar conta como" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
             </Label>
-            <Label fx:id="label11" layoutX="443.0" layoutY="455.0" minHeight="16" minWidth="69" text="Confirmar Password" textFill="WHITE">
+            <Label fx:id="label11" layoutX="444.0" layoutY="467.0" minHeight="16" minWidth="69" text="Confirmar Password" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
             </Label>
-            <Label fx:id="label112" layoutX="445.0" layoutY="372.0" minHeight="16" minWidth="69" text="Password" textFill="WHITE">
+            <Label fx:id="label112" layoutX="444.0" layoutY="375.0" minHeight="16" minWidth="69" text="Password" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
             </Label>
-            <Label fx:id="label12" layoutX="444.0" layoutY="288.0" minHeight="16" minWidth="69" text="Email" textFill="WHITE">
+            <Label fx:id="label12" layoutX="444.0" layoutY="289.0" minHeight="16" minWidth="69" text="Email" textFill="WHITE">
                <font>
                   <Font name="Vision-Light" size="26.0" />
                </font>
             </Label>
-            <ImageView fitHeight="170.0" fitWidth="230.0" layoutX="557.0" layoutY="14.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="170.0" fitWidth="230.0" layoutX="556.0" layoutY="71.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@pics/user.png" />
                </image>
@@ -47,27 +48,28 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
             </ImageView>
-            <Label alignment="CENTER" layoutX="550.0" layoutY="184.0" minHeight="16" minWidth="69" text="Criar Conta" textFill="WHITE">
+            <Label alignment="CENTER" layoutX="543.0" layoutY="248.0" minHeight="16" minWidth="69" text="Criar Conta" textFill="WHITE">
                <font>
                   <Font name="Vision-BlackItalic" size="34.0" />
                </font>
             </Label>
-            <TextField fx:id="txtfldEmail" alignment="TOP_LEFT" layoutX="443.0" layoutY="318.0" prefHeight="39.0" prefWidth="395.0">
+            <TextField fx:id="txtfldEmail" alignment="TOP_LEFT" layoutX="444.0" layoutY="324.0" prefHeight="39.0" prefWidth="395.0">
                <font>
                   <Font name="Vision-Regular" size="22.0" />
-               </font></TextField>
-            <PasswordField fx:id="txtfldPassword" layoutX="445.0" layoutY="400.0" prefHeight="45.0" prefWidth="395.0" />
-            <PasswordField fx:id="txtfldConfirmarPassword" layoutX="443.0" layoutY="486.0" prefHeight="45.0" prefWidth="395.0" />
-            <ComboBox fx:id="cmbox_tipouser_criarconta" layoutX="443.0" layoutY="567.0" prefHeight="39.0" prefWidth="395.0" >
-                <items>
-                <FXCollections fx:factory="observableArrayList">
-                    <String fx:value="Artista" />
-                    <String fx:value="Editora" />
-                    <String fx:value="Estúdio" />
-                </FXCollections>
-                </items>
+               </font>
+            </TextField>
+            <PasswordField fx:id="txtfldPassword" layoutX="444.0" layoutY="408.0" prefHeight="45.0" prefWidth="395.0" />
+            <PasswordField fx:id="txtfldConfirmarPassword" layoutX="443.0" layoutY="498.0" prefHeight="45.0" prefWidth="395.0" />
+            <ComboBox fx:id="cmboxTipoUtilizador" layoutX="443.0" layoutY="586.0" prefHeight="39.0" prefWidth="395.0">
+               <items>
+                  <FXCollections fx:factory="observableArrayList">
+                     <String fx:value="Artista" />
+                     <String fx:value="Editora" />
+                     <String fx:value="Dir. Estúdio" />
+                  </FXCollections>
+               </items>
             </ComboBox>
-            <Button layoutX="577.0" layoutY="663.0" mnemonicParsing="false" onAction="#criarConta" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
+            <Button layoutX="567.0" layoutY="653.0" mnemonicParsing="false" onAction="#criarConta" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
                <font>
                   <Font name="Vision-Heavy" size="23.0" />
                </font>
@@ -75,7 +77,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="589.0" layoutY="711.0" mnemonicParsing="false" onAction="#abrirPaginaIniciarSessao" stylesheets="@styles.css" text="Iniciar Sessão" textAlignment="CENTER">
+            <Button layoutX="575.0" layoutY="712.0" mnemonicParsing="false" onAction="#abrirPaginaIniciarSessao" stylesheets="@styles.css" text="Iniciar Sessão" textAlignment="CENTER">
                <font>
                   <Font name="Vision-Regular" size="14.0" />
                </font>
@@ -84,6 +86,6 @@
                </cursor>
             </Button>
          </children>
-      </AnchorPane>
-   </children>
-</AnchorPane>
+      </Pane>
+   </center>
+</BorderPane>
