--- a/YourasMusic/src/yourasmusic/FXMLCriarContaEstudio.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLCriarContaEstudio.fxml
@@ -1,16 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1240.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="yourasmusic.FXMLCriarContaEstudioController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1240.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLCriarContaEstudioController">
    <children>
-      <Label layoutX="484.0" layoutY="360.0" text="CRIAR CONTA ESTUDIO">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Label>
+      <BorderPane layoutX="-1.0" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;">
+         <center>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #607D8B;" BorderPane.alignment="CENTER">
+               <children>
+                  <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#37474f" height="716.0" layoutX="277.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="727.0" />
+                  <Label fx:id="label12" layoutX="447.0" layoutY="339.0" minHeight="16" minWidth="69" text="Morada" textFill="WHITE">
+                     <font>
+                        <Font name="Vision-Light" size="26.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="170.0" fitWidth="230.0" layoutX="556.0" layoutY="71.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@pics/user.png" />
+                     </image>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                  </ImageView>
+                  <Label alignment="CENTER" layoutX="500.0" layoutY="248.0" minHeight="16" minWidth="69" text="Criar Conta Estudio" textFill="WHITE">
+                     <font>
+                        <Font name="Vision-BlackItalic" size="34.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txtfldEmail" alignment="TOP_LEFT" layoutX="447.0" layoutY="374.0" prefHeight="39.0" prefWidth="395.0">
+                     <font>
+                        <Font name="Vision-Regular" size="22.0" />
+                     </font>
+                  </TextField>
+                  <Button layoutX="567.0" layoutY="653.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
+                     <font>
+                        <Font name="Vision-Heavy" size="23.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button layoutX="575.0" layoutY="712.0" mnemonicParsing="false" onAction="#abrirPaginaIniciarSessao" stylesheets="@styles.css" text="Iniciar Sessão" textAlignment="CENTER">
+                     <font>
+                        <Font name="Vision-Regular" size="14.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </Pane>
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
