--- a/YourasMusic/src/yourasmusic/FXMLCriarContaArtista.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLCriarContaArtista.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1240.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLCriarContaArtistaController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1240.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLCriarContaArtistaController">
    <children>
       <Label layoutX="452.0" layoutY="365.0" text="Criar  Conta Artista">
          <font>
@@ -25,7 +25,7 @@
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #607D8B;" BorderPane.alignment="CENTER">
                <children>
                   <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#37474f" height="732.0" layoutX="277.0" layoutY="26.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="727.0" />
-                  <Label fx:id="label11" layoutX="444.0" layoutY="427.0" minHeight="16" minWidth="69" text="Data Nascimento" textFill="WHITE">
+                  <Label fx:id="label11" layoutX="444.0" layoutY="422.0" minHeight="16" minWidth="69" text="Data Nascimento" textFill="WHITE">
                      <font>
                         <Font name="Vision-Light" size="26.0" />
                      </font>
@@ -48,7 +48,7 @@
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
                   </ImageView>
-                  <Label alignment="CENTER" layoutX="504.0" layoutY="216.0" minHeight="16" minWidth="69" text="Criar Conta Artista" textFill="WHITE">
+                  <Label alignment="CENTER" layoutX="504.0" layoutY="212.0" minHeight="16" minWidth="69" text="Criar Conta Artista" textFill="WHITE">
                      <font>
                         <Font name="Vision-BlackItalic" size="34.0" />
                      </font>
@@ -58,8 +58,6 @@
                         <Font name="Vision-Regular" size="22.0" />
                      </font>
                   </TextField>
-                  <PasswordField fx:id="txtfldPassword" layoutX="444.0" layoutY="373.0" prefHeight="45.0" prefWidth="395.0" />
-                  <PasswordField fx:id="txtfldConfirmarPassword" layoutX="443.0" layoutY="458.0" prefHeight="45.0" prefWidth="395.0" />
                   <Button layoutX="567.0" layoutY="670.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
                      <font>
                         <Font name="Vision-Heavy" size="23.0" />
@@ -81,13 +79,27 @@
                         <Font name="Vision-Light" size="26.0" />
                      </font>
                   </Label>
-                  <PasswordField fx:id="txtfldConfirmarPassword1" layoutX="443.0" layoutY="538.0" prefHeight="45.0" prefWidth="395.0" />
                   <Label fx:id="label1111" layoutX="445.0" layoutY="585.0" minHeight="16" minWidth="69" text="Contacto" textFill="WHITE">
                      <font>
                         <Font name="Vision-Light" size="26.0" />
                      </font>
                   </Label>
-                  <PasswordField fx:id="txtfldConfirmarPassword11" layoutX="444.0" layoutY="616.0" prefHeight="45.0" prefWidth="395.0" />
+                  <TextField fx:id="txtfldEmail1" alignment="TOP_LEFT" layoutX="443.0" layoutY="371.0" prefHeight="39.0" prefWidth="395.0">
+                     <font>
+                        <Font name="Vision-Regular" size="22.0" />
+                     </font>
+                  </TextField>
+                  <TextField fx:id="txtfldEmail3" alignment="TOP_LEFT" layoutX="443.0" layoutY="532.0" prefHeight="39.0" prefWidth="395.0">
+                     <font>
+                        <Font name="Vision-Regular" size="22.0" />
+                     </font>
+                  </TextField>
+                  <TextField fx:id="txtfldEmail4" alignment="TOP_LEFT" layoutX="443.0" layoutY="616.0" prefHeight="39.0" prefWidth="395.0">
+                     <font>
+                        <Font name="Vision-Regular" size="22.0" />
+                     </font>
+                  </TextField>
+                  <DatePicker layoutX="443.0" layoutY="453.0" prefHeight="46.0" prefWidth="396.0" />
                </children>
             </Pane>
          </center>
