--- a/YourasMusic/src/yourasmusic/FXMLCriarContaEditora.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLCriarContaEditora.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,19 +12,19 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1240.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLCriarContaEditoraController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1240.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLCriarContaEditoraController">
    <children>
       <BorderPane prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #607D8B;">
          <center>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #607D8B;" BorderPane.alignment="CENTER">
                <children>
                   <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#37474f" height="716.0" layoutX="277.0" layoutY="42.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="727.0" />
-                  <Label fx:id="label11" layoutX="444.0" layoutY="496.0" minHeight="16" minWidth="69" text="Contacto" textFill="WHITE">
+                  <Label fx:id="label11" layoutX="444.0" layoutY="549.0" minHeight="16" minWidth="69" text="Contacto" textFill="WHITE">
                      <font>
                         <Font name="Vision-Light" size="26.0" />
                      </font>
                   </Label>
-                  <Label fx:id="label112" layoutX="444.0" layoutY="404.0" minHeight="16" minWidth="69" text="Morada" textFill="WHITE">
+                  <Label fx:id="label112" layoutX="444.0" layoutY="407.0" minHeight="16" minWidth="69" text="Morada" textFill="WHITE">
                      <font>
                         <Font name="Vision-Light" size="26.0" />
                      </font>
@@ -53,8 +52,6 @@
                         <Font name="Vision-Regular" size="22.0" />
                      </font>
                   </TextField>
-                  <PasswordField fx:id="txtfldPassword" layoutX="444.0" layoutY="437.0" prefHeight="45.0" prefWidth="395.0" />
-                  <PasswordField fx:id="txtfldConfirmarPassword" layoutX="443.0" layoutY="527.0" prefHeight="45.0" prefWidth="395.0" />
                   <Button layoutX="567.0" layoutY="653.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="133.0" text="Registar" textAlignment="CENTER">
                      <font>
                         <Font name="Vision-Heavy" size="23.0" />
@@ -71,6 +68,16 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
+                  <TextField fx:id="txtfldEmail1" alignment="TOP_LEFT" layoutX="443.0" layoutY="438.0" prefHeight="104.0" prefWidth="395.0">
+                     <font>
+                        <Font name="Vision-Regular" size="22.0" />
+                     </font>
+                  </TextField>
+                  <TextField fx:id="txtfldEmail2" alignment="TOP_LEFT" layoutX="444.0" layoutY="580.0" prefHeight="39.0" prefWidth="395.0">
+                     <font>
+                        <Font name="Vision-Regular" size="22.0" />
+                     </font>
+                  </TextField>
                </children>
             </Pane>
          </center>
