--- a/YourasMusic/src/yourasmusic/FXMLUpload.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLUpload.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="yourasmusic.FXMLUploadController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLUploadController">
    <children>
-      <Label layoutX="444.0" layoutY="353.0" text="Upload">
+      <Button layoutX="430.0" layoutY="373.0" mnemonicParsing="false" onAction="#uploadMusic" text="UPLOAD">
          <font>
-            <Font size="32.0" />
+            <Font size="25.0" />
          </font>
-      </Label>
+      </Button>
    </children>
 </AnchorPane>
