--- a/YourasMusic/src/yourasmusic/FXMLEditora.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLEditora.fxml
@@ -12,7 +12,7 @@
    <children>
       <BorderPane prefHeight="821.0" prefWidth="1012.0">
          <center>
-            <TilePane fx:id="tileAlbuns" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <TilePane fx:id="tileEditoras" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
          </center>
          <top>
             <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
