--- a/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
@@ -52,6 +52,7 @@
                   <Font size="16.0" />
                </font>
             </Button>
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#terminarSessao" prefHeight="26.0" prefWidth="217.0" styleClass="button-terminarsessao" stylesheets="@styles.css" text="Terminar Sessao" />
          </children>
       </Pane>
    </left>
