--- a/YourasMusic/src/yourasmusic/FXMLUpload.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLUpload.fxml
@@ -7,30 +7,35 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLUploadController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLUploadController">
    <children>
       <Button layoutX="499.0" layoutY="484.0" mnemonicParsing="false" onAction="#uploadMusic" prefHeight="48.0" prefWidth="332.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Selecionar Audio">
          <font>
             <Font size="25.0" />
          </font>
       </Button>
-      <Label layoutX="148.0" layoutY="79.0" prefHeight="31.0" prefWidth="695.0" text="Titulo" textFill="WHITE">
+      <Label layoutX="150.0" layoutY="239.0" prefHeight="31.0" prefWidth="695.0" text="Titulo" textFill="WHITE">
          <font>
             <Font size="26.0" />
          </font>
       </Label>
-      <TextField fx:id="nome" layoutX="148.0" layoutY="110.0" prefHeight="48.0" prefWidth="695.0" />
-      <Label layoutX="152.0" layoutY="192.0" prefHeight="31.0" prefWidth="695.0" text="Genero" textFill="WHITE">
+      <TextField fx:id="nome" layoutX="150.0" layoutY="270.0" prefHeight="48.0" prefWidth="695.0" />
+      <Label layoutX="154.0" layoutY="352.0" prefHeight="31.0" prefWidth="695.0" text="Genero" textFill="WHITE">
          <font>
             <Font size="26.0" />
          </font>
       </Label>
-      <ComboBox fx:id="genero" layoutX="148.0" layoutY="223.0" prefHeight="48.0" prefWidth="695.0" />
+      <ComboBox fx:id="genero" layoutX="150.0" layoutY="383.0" prefHeight="48.0" prefWidth="695.0" />
       <TextField fx:id="endereco" layoutX="151.0" layoutY="484.0" prefHeight="48.0" prefWidth="332.0" />
-      <Button layoutX="218.0" layoutY="653.0" mnemonicParsing="false" onAction="#enviarUpload" prefHeight="65.0" prefWidth="507.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Carregar">
+      <Button layoutX="218.0" layoutY="653.0" mnemonicParsing="false" onAction="#enviarUpload" prefHeight="65.0" prefWidth="507.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Confirmar">
          <font>
             <Font size="25.0" />
          </font>
       </Button>
+      <Label alignment="CENTER" layoutX="328.0" layoutY="112.0" prefHeight="24.0" prefWidth="375.0" text="Nova Musica" textFill="WHITE">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
