--- a/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -52,7 +53,9 @@
                   <Font size="16.0" />
                </font>
             </Button>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#terminarSessao" prefHeight="26.0" prefWidth="217.0" styleClass="button-terminarsessao" stylesheets="@styles.css" text="Terminar Sessao" />
+            <Button layoutX="18.0" layoutY="95.0" mnemonicParsing="false" onAction="#terminarSessao" prefHeight="26.0" prefWidth="217.0" styleClass="button-terminarsessao" stylesheets="@styles.css" text="Terminar Sessao" />
+            <Label layoutX="28.0" layoutY="23.0" prefHeight="32.0" prefWidth="191.0" style="-fx-font-weight: bold;" text="Bem vindo, " textFill="WHITE" />
+            <Label fx:id="lblUsername" alignment="CENTER" layoutX="25.0" layoutY="55.0" prefHeight="40.0" prefWidth="218.0" text="Label" textFill="WHITE" />
          </children>
       </Pane>
    </left>
