--- a/YourasMusic/src/yourasmusic/FXMLArtistaIndividual.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLArtistaIndividual.fxml
@@ -4,23 +4,29 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="yourasmusic.FXMLArtistaIndividualController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLArtistaIndividualController">
    <children>
       <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="800.0" prefWidth="990.0">
          <center>
             <Pane prefHeight="462.0" prefWidth="565.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="nomeAlbum" alignment="CENTER" layoutX="17.0" layoutY="151.0" prefHeight="147.0" prefWidth="957.0" text="nome" textFill="WHITE">
+                  <Label fx:id="nomeAlbum" alignment="CENTER" layoutX="17.0" layoutY="36.0" prefHeight="147.0" prefWidth="957.0" text="nome" textFill="WHITE">
                      <font>
                         <Font size="58.0" />
                      </font>
                   </Label>
-                  <Label fx:id="anoAlbum" alignment="CENTER" layoutX="371.0" layoutY="309.0" prefHeight="47.0" prefWidth="248.0" text="ano" textFill="WHITE">
+                  <Label fx:id="anoAlbum" alignment="CENTER" layoutX="45.0" layoutY="160.0" prefHeight="47.0" prefWidth="306.0" text="Naturalidade" textFill="WHITE">
                      <font>
                         <Font size="39.0" />
+                     </font>
+                  </Label>
+                  <TilePane fx:id="tileMusicaArtista" layoutX="14.0" layoutY="292.0" prefHeight="627.0" prefWidth="964.0" />
+                  <Label fx:id="tileMusicasArtista" alignment="CENTER" layoutX="343.0" layoutY="230.0" prefHeight="47.0" prefWidth="306.0" text="Musicas" textFill="WHITE">
+                     <font>
+                        <Font size="27.0" />
                      </font>
                   </Label>
                </children>
